[feat] 공통응답 수정